HIPP-1295 - fixing css issue that caused long tag values to spill out of their container (#272)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -688,6 +688,7 @@ nav.hip-pagination--centered {
     letter-spacing: 1px;
     font-size: 1rem;
     white-space: nowrap;
+    max-width: none;
 }
 
 .hip-tag--api-status {
